AlgorithmImplementation/log.txt
mkdir -p /home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/obj
g++ -c -Wall -Wconversion -std=c++11 -g -MD -MP -MF .dep/Edge.o.d -I/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/utils/inc/ -I/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/socket/inc/ -I/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/inc/ -DCURR_LEVEL=3  /home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp -o /home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/obj/Edge.o -levent -lpthread
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp: In constructor ‘Process::Process(ServerSocketTcp, EdgeState, std::__cxx11::string, uint16_t)’:
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp:169:94: error: no matching function for call to ‘ClientSocketTcp::ClientSocketTcp()’
 Process::Process(ServerSocketTcp sock,EdgeState state,std::string cloudip, uint16_t cloudport)
                                                                                              ^
In file included from /home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/inc/Edge.h:9:0,
                 from /home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp:2:
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/socket/inc/ClientSocketTCP.h:13:3: note: candidate: ClientSocketTcp::ClientSocketTcp(std::__cxx11::string, uint16_t)
   ClientSocketTcp ( std::string host, uint16_t port );
   ^
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/socket/inc/ClientSocketTCP.h:13:3: note:   candidate expects 2 arguments, 0 provided
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/socket/inc/ClientSocketTCP.h:9:7: note: candidate: constexpr ClientSocketTcp::ClientSocketTcp(const ClientSocketTcp&)
 class ClientSocketTcp : private SocketTcp
       ^
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/socket/inc/ClientSocketTCP.h:9:7: note:   candidate expects 1 argument, 0 provided
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp: At global scope:
/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/code/algo/src/Edge.cpp:187:13: error: expected constructor, destructor, or type conversion before ‘;’ token
   ~Process();
             ^
makefile:51: recipe for target '/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/obj/Edge.o' failed
make: *** [/home/doniv/Repos/vlasrado3/ECI-8803/AlgorithmImplementation/obj/Edge.o] Error 1
